--- a/style.css
+++ b/style.css
@@ -50,4 +50,8 @@ body{
     color: white;
     border-radius: 24px;
     transition: 0.25s;
+    cursor: pointer;
+}
+.box input[type = "submit"]:hover{
+    background: #2ecc71;
 }
