--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 body{
     margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    background: #34495e;
+    padding: 30;
+    font-family: 'Times New Roman', Times, serif;
+    background: #5b5555;
 }
 .box{
-    width: 300px;
+    width: 400px;
     padding: 40px;
     position: absolute;
     top: 50%;
@@ -13,11 +13,13 @@ body{
     transform: translate(-50%,-50%);
     background: #191919;
     text-align: center;
+    border-radius: 30px;
 }
 .box h1{
     color: white;
     text-transform: uppercase;
     font-weight: 500;
+    font-family: 'Times New Roman', Times, serif;
 }
 .box input[type="text"], .box input[type = "password"]{
     border: 0;
@@ -25,17 +27,19 @@ body{
     display: block;
     margin: 20px auto;
     text-align: center;
-    border: 2px solid #3498db;
+    border: 3px solid #c42fed;
     padding: 14px 10px;
     width: 200px;
     outline: none;
     color: white;
     border-radius: 24px;
     transition: 0.25s;
+    font-family: 'Times New Roman', Times, serif;
 }
 .box input[type="text"]:focus, .box input[type = "password"]:focus{
     width: 280px;
-    border-color: #2ecc71;
+    border-color: #c42fed;
+    font-family: 'Times New Roman', Times, serif;
 }
 .box input[type = "submit"]{
     border: 0;
@@ -43,7 +47,7 @@ body{
     display: block;
     margin: 20px auto;
     text-align: center;
-    border: 2px solid #2ecc71;
+    border: 2px solid #3195f9;
     padding: 14px 40px;
     width: 200px;
     outline: none;
@@ -51,7 +55,9 @@ body{
     border-radius: 24px;
     transition: 0.25s;
     cursor: pointer;
+    font-family: 'Times New Roman', Times, serif;
 }
 .box input[type = "submit"]:hover{
-    background: #2ecc71;
+    background: #c42fed;
+    font-family: 'Times New Roman', Times, serif;
 }
