--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body{
     display: block;
     margin: 20px auto;
     text-align: center;
-    border: 2px solid #3195f9;
+    border: 2px solid #c42fed;
     padding: 14px 40px;
     width: 200px;
     outline: none;
